--- a/kpitarget.html
+++ b/kpitarget.html
@@ -188,7 +188,7 @@
                 <form class="form-inline">
                     <div class="form-group"
                          style="margin:5px 40px 0px 25px;padding-right:30px;">
-                        <label>Period :</label>
+                        <label class="labletop">Period :</label>
                         <select class="form-control">
                             <option>Yearly</option>
                             <option>Monthly</option>
